a simple bug fixed

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             
             <input id="input-filed" class="py-1 px-2 rounded-sm block w-full" placeholder="Inter Number" type="text">
             <div class="text-center">
-                <button id="double-btn" class="bg-amber-500 rounded py-2 px-3 m-5 text-white font-semibold hover:shadow">Double</button>
-                <button id="triple-btn" class="bg-cyan-600 rounded py-2 px-3 m-5 text-white font-semibold hover:shadow">Double</button>
+                <button id="double-btn" class="bg-amber-500 w-20 rounded py-2 px-3 m-5 text-white font-semibold hover:shadow">Double</button>
+                <button id="triple-btn" class="bg-cyan-600 w-20 rounded py-2 px-3 m-5 text-white font-semibold hover:shadow">Triple</button>
             </div>
         </div>
     </section>
